--- a/trunk/HovercraftUniverse/Content/Content.vcproj
+++ b/trunk/HovercraftUniverse/Content/Content.vcproj
@@ -49,6 +49,7 @@
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4290"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -170,31 +171,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\Asteroid.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Boost.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\CheckPoint.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\CustomOgreMaxScene.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\DefaultOgreMaxSceneCallback.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Finish.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Hovercraft.cpp"
 				>
 			</File>
 			<File
@@ -213,60 +194,72 @@
 				RelativePath=".\ParseException.cpp"
 				>
 			</File>
-			<File
-				RelativePath=".\Portal.cpp"
+			<Filter
+				Name="UserData"
 				>
-			</File>
-			<File
-				RelativePath=".\PowerupSpawn.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ResetSpawn.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Start.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\StartPosition.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Track.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\UserData.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\UserDataCallback.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\UserDataFactory.cpp"
-				>
-			</File>
+				<File
+					RelativePath=".\Asteroid.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Boost.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\CheckPoint.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Finish.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Hovercraft.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Portal.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\PowerupSpawn.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\ResetSpawn.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Start.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\StartPosition.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Track.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\UserData.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\UserDataCallback.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\UserDataFactory.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\Asteroid.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Boost.h"
-				>
-			</File>
-			<File
-				RelativePath=".\CheckPoint.h"
-				>
-			</File>
 			<File
 				RelativePath=".\CustomOgreMaxScene.h"
 				>
@@ -277,14 +270,6 @@
 			</File>
 			<File
 				RelativePath=".\DefaultOgreMaxSceneCallback.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Finish.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Hovercraft.h"
 				>
 			</File>
 			<File
@@ -299,42 +284,66 @@
 				RelativePath=".\ParseException.h"
 				>
 			</File>
-			<File
-				RelativePath=".\Portal.h"
+			<Filter
+				Name="UserData"
 				>
-			</File>
-			<File
-				RelativePath=".\PowerupSpawn.h"
-				>
-			</File>
-			<File
-				RelativePath=".\ResetSpawn.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Start.h"
-				>
-			</File>
-			<File
-				RelativePath=".\StartPosition.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Track.h"
-				>
-			</File>
-			<File
-				RelativePath=".\UserData.h"
-				>
-			</File>
-			<File
-				RelativePath=".\UserDataCallback.h"
-				>
-			</File>
-			<File
-				RelativePath=".\UserDataFactory.h"
-				>
-			</File>
+				<File
+					RelativePath=".\Asteroid.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Boost.h"
+					>
+				</File>
+				<File
+					RelativePath=".\CheckPoint.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Finish.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Hovercraft.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Portal.h"
+					>
+				</File>
+				<File
+					RelativePath=".\PowerupSpawn.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ResetSpawn.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Start.h"
+					>
+				</File>
+				<File
+					RelativePath=".\StartPosition.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Track.h"
+					>
+				</File>
+				<File
+					RelativePath=".\UserData.h"
+					>
+				</File>
+				<File
+					RelativePath=".\UserDataCallback.h"
+					>
+				</File>
+				<File
+					RelativePath=".\UserDataFactory.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Resource Files"
