--- a/trunk/HovercraftUniverse/Sound/Sound.vcproj
+++ b/trunk/HovercraftUniverse/Sound/Sound.vcproj
@@ -157,6 +157,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Moveable3DEmitter.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\SoundManager.cpp"
 				>
 			</File>
@@ -166,6 +170,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Moveable3DEmitter.h"
+				>
+			</File>
 			<File
 				RelativePath=".\SoundManager.h"
 				>
