--- a/HovercraftUniverse/HavocLoader/HavocLoader.vcproj
+++ b/HovercraftUniverse/HavocLoader/HavocLoader.vcproj
@@ -193,10 +193,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GravityPhantom.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\HoverCraftUniverseWorld.cpp"
 				>
 			</File>
@@ -209,15 +205,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\PlanetGravityAction.cpp"
+				RelativePath=".\PullGravityPhantom.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\PushGravityPhantom.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\PushPlanetGravityAction.cpp"
+				RelativePath=".\PullPlanetGravityAction.cpp"
 				>
 			</File>
 			<File
@@ -247,10 +239,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\GravityPhantom.h"
-				>
-			</File>
-			<File
 				RelativePath=".\HoverCraftUniverseWorld.h"
 				>
 			</File>
@@ -263,15 +251,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\PlanetGravityAction.h"
+				RelativePath=".\PullGravityPhantom.h"
 				>
 			</File>
 			<File
-				RelativePath=".\PushGravityPhantom.h"
-				>
-			</File>
-			<File
-				RelativePath=".\PushPlanetGravityAction.h"
+				RelativePath=".\PullPlanetGravityAction.h"
 				>
 			</File>
 		</Filter>
